<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    

    <Button
        android:id="@+id/btContactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:padding="15dp"
        android:text="@string/contact" />

    <Button
        android:id="@+id/btSendAppFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:padding="15dp"
        android:text="@string/feedback" />

    <Button
        android:id="@+id/btPrivacyAndSecurity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:padding="15dp"
        android:text="@string/privacy_and_security" />

    <Button
        android:id="@+id/btTermsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:padding="15dp"
        android:text="@string/terms_and_conditions" />

    <Button
        android:id="@+id/btHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:padding="15dp"
        android:text="@string/help" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/copyright_text" />

</LinearLayout>