<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="12dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/title"
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/stroke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selectable_background_cardbank"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="4dp" >
        
        <Spinner 
            android:id="@+id/spSearchRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/search_regions"
            android:prompt="@string/search_region"
            android:layout_margin="5dp"
            />
        
        <Spinner 
            android:id="@+id/spSearchService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/search_service_type"
            android:prompt="@string/search_service"
            android:layout_margin="5dp"
            />

        <Button 
            android:id="@+id/btSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:background="@drawable/custom_button"
            android:layout_margin="5dp"
            />

    </LinearLayout>

</LinearLayout>