<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/crdb_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/bank_logo_content_description"
            android:src="@drawable/crdb_logo" />
        
        <TextView 
            android:id="@+id/tvKey"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=""
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/key1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_gravity="left"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="" />

            <EditText
                android:id="@+id/key2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="" />

            <EditText
                android:id="@+id/key3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_gravity="right"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="" />
        </LinearLayout>
        
        <Button 
            android:id="@+id/btContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/validate"
            android:background="@drawable/custom_button"
            />
        
        <TextView 
            android:id="@+id/tvResetKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reset_key"
            />
    </LinearLayout>

</ScrollView>